- rename tensor engine into tensor manager - cover decompositions with tests - move linear models onto tensors